# Expedia-Hotel-Recommendations

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py
app/callbacks/: __init__.py  combined_callbacks.py  multivariate_callbacks.py  navigation_callbacks.py  overview_callbacks.py  univariate_callbacks.py
app/layout/: __init__.py  multivariate_layout.py  overview_layout.py  sidebar.py  univariate_layout.py
app/utils/: config_loader.py  data_loader.py  feature_utils.py  figure_factory.py
config/: app_config.yaml  style_config.yaml  table_styles.yaml
configs/features/: base_features.yaml  feature_registry.yaml  rename_map.yaml  schema.yaml
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
exp_personal/: pyvenv.cfg
notebooks/: Untitled-1.ipynb  categorical_distribution.html  feature_1_hist.html  hist_checkbox_columns.html  hist_no_outlier_toggle.html  hist_single_column.html  hist_with_outlier_toggle.html  hist_with_outliers.html  multi_col_hist_arrow.html  phase.ipynb  time_series_chart.html  vizualizer.py
src/configs/: downcast_dtypes_map.yaml  feature_rename_map.yaml  paths.py
src/expedia_ranker/command_line/: preprocess.py
src/expedia_ranker/io/: path_helpers.py  paths.py  yaml_io.py
src/expedia_ranker/utilities/: logging.py
src/features/: app.py  build_features.py  dtypes.py  feature_pipeline.py  hotel_rolling_features.py  location_features.py  temporal.py  user_historical_features.py
src/features/booking/: booking_features.py
src/visualization/: preprocess_viz_data.py
(+11 files in other folders)
